--- a/src/custom.css
+++ b/src/custom.css
@@ -1,11 +1,12 @@
-:root {
-  --side-bg: rgb(31, 46, 65);
-}
-
-p {
+p,
+pre {
   margin: 0;
 }
 
 .square {
   aspect-ratio: 1 / 1;
+}
+
+.ant-popover-inner-content {
+  padding: 0;
 }
