--- a/src/custom.css
+++ b/src/custom.css
@@ -11,12 +11,21 @@ pre {
   padding: 0;
 }
 
+.ant-message-custom-content {
+  display: flex;
+  align-items: center;
+}
+
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 1px;
   background: #f9f9f9;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background: #e0e0e0;
+}
+
+:root {
+  overflow: auto;
 }
